# osziflap

./: .gitignore  README.md  flappy.py  flappy2.py  pyproject.toml  schematic.sch  soundgen.py  test.py
docs/: README.md
flappy/: flappy_test.py
flappy2/: flappy2.py  soundgen.py
